# clearpath_msgs

./: CMakeLists.txt  README.md  package.xml
clearpath_motor_msgs/: CMakeLists.txt  (+1 more)
clearpath_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_camera_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_camera_msgs/action/: InspectPOI.action
clearpath_outdoornav_msgs/clearpath_camera_msgs/srv/: Q62AreaZoom.srv  q62AreaZoom.srv
clearpath_outdoornav_msgs/clearpath_configuration_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_configuration_msgs/msg/: AutonomyConfig.msg  PlatformConfig.msg
clearpath_outdoornav_msgs/clearpath_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_control_msgs/msg/: AutonomySync.msg  ControlMode.msg  ControlSelectionState.msg
clearpath_outdoornav_msgs/clearpath_control_msgs/srv/: SetControlMode.srv
clearpath_outdoornav_msgs/clearpath_dock_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_dock_msgs/action/: ApproachDock.action  Dock.action  LocalDock.action  LocalUndock.action  NetworkDock.action  RadiusDock.action  Undock.action
clearpath_outdoornav_msgs/clearpath_dock_msgs/msg/: DockInfo.msg  DockProperties.msg  DockState.msg  TargetTrackerState.msg
clearpath_outdoornav_msgs/clearpath_dock_msgs/srv/: AddDock.srv  ExportData.srv  GetDockByUuid.srv  ImportData.srv  RemoveDock.srv  SetDockLocationById.srv  SetDockLocationByName.srv
clearpath_outdoornav_msgs/clearpath_localization_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_localization_msgs/action/: SurveyBaseStation.action
clearpath_outdoornav_msgs/clearpath_localization_msgs/msg/: GNSSStatus.msg  GPSStatus.msg  LocalizationStatus.msg  SurveyProperties.msg  XvnStatus.msg
clearpath_outdoornav_msgs/clearpath_localization_msgs/srv/: ConvertCartesianToLatLon.srv  ConvertCartesianToLatLonArray.srv  ConvertLatLonToCartesian.srv  ConvertLatLonToCartesianArray.srv  ResetLocalization.srv
clearpath_outdoornav_msgs/clearpath_logger_msgs/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.xml  package.xml
clearpath_outdoornav_msgs/clearpath_logger_msgs/msg/: Event.msg  EventLog.msg  EventLogs.msg
clearpath_outdoornav_msgs/clearpath_logger_msgs/srv/: DeleteLog.srv  DownloadLog.srv  GetAllLogs.srv  RecordCustomEvent.srv  RecordErrorEvent.srv  RecordEvent.srv  RecordLocationEvent.srv  RecordMediaEvent.srv  RecordPowerEvent.srv  StartRecording.srv  StopRecording.srv
clearpath_outdoornav_msgs/clearpath_mission_manager_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_mission_manager_msgs/msg/: NetworkEdgeReq.msg  NetworkMapState.msg  NetworkMapValidityState.msg  StorageState.msg
clearpath_outdoornav_msgs/clearpath_mission_manager_msgs/srv/: AddNetworkEdge.srv  AddNetworkPath.srv  AddNetworkPoint.srv  AddRemoveById.srv  AddRemoveTag.srv  CloneMission.srv  CloneNetworkMap.srv  CloneNetworkMission.srv  ClonePointOfInterest.srv  CreateMission.srv  CreateNetworkMap.srv  CreateNetworkMission.srv  CreatePointOfInterest.srv  CreateTask.srv  CreateWaypoint.srv  CreateWaypointFromPoi.srv  DeleteMultiple.srv  ExportToKml.srv  GetAllMissions.srv  GetAllNetworkMaps.srv  GetAllNetworkMissions.srv  GetAllPointsOfInterest.srv  GetAllTasks.srv  GetAllWaypoints.srv  GetEverything.srv  GetMission.srv  GetNetworkMap.srv  GetNetworkMission.srv  GetPointOfInterest.srv  GetTask.srv  GetWaypoint.srv  ImportData.srv  ImportMission.srv  ImportNetworkMap.srv  ImportNetworkMission.srv  SplitNetworkEdge.srv  UpdateMission.srv  UpdateNetworkEdge.srv  UpdateNetworkEdges.srv  UpdateNetworkMap.srv  (+7 more)
clearpath_outdoornav_msgs/clearpath_mission_scheduler_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_mission_scheduler_msgs/action/: RunNow.action  RunScheduleByUuid.action
clearpath_outdoornav_msgs/clearpath_mission_scheduler_msgs/msg/: NextSchedule.msg  Schedule.msg  ScheduledMission.msg  StorageState.msg  UtcTime.msg
clearpath_outdoornav_msgs/clearpath_mission_scheduler_msgs/srv/: AddMissionToSchedule.srv  CloneSchedule.srv  CreateSchedule.srv  EnableSchedule.srv  GetAllSchedules.srv  GetNextSchedule.srv  GetSchedule.srv  ImportData.srv  UpdateSchedule.srv
clearpath_outdoornav_msgs/clearpath_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_navigation_msgs/action/: ExecuteMissionByUuid.action  ExecuteNetworkGoTo.action  ExecuteNetworkMissionByUuid.action  GetWaypointPath.action  Mission.action  NetworkGoToPOI.action  RecordPath.action  RunNetworkGoToPlanner.action  RunNetworkMissionPreviewer.action  SmoothPath.action  UITask.action
clearpath_outdoornav_msgs/clearpath_navigation_msgs/msg/: AutonomyStatus.msg  CurrentGoalInfo.msg  DistanceToGoal.msg  Metrics.msg  Mission.msg  MissionStatus.msg  MotionState.msg  NetworkEdge.msg  NetworkGoalState.msg  NetworkMap.msg  NetworkMission.msg  NetworkMissionSegment.msg  NetworkPoint.msg  PointOfInterest.msg  PointVector.msg  Progress.msg  ScanPoints.msg  Task.msg  Vector2D.msg  Vector2D64.msg  Waypoint.msg  WaypointStatus.msg
clearpath_outdoornav_msgs/clearpath_navigation_msgs/srv/: AutonomyTaskSrv.srv  SetDelayCompensation.srv  SetStopDistance.srv
clearpath_outdoornav_msgs/clearpath_outdoornav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_outdoornav_msgs/clearpath_safety_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_platform_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_platform_msgs/msg/: Fans.msg  HMI.msg  Lights.msg  PlatformID.msg  Power.msg  RYG.msg  StackLightState.msg  Status.msg  StopStatus.msg
clearpath_platform_msgs/srv/: ConfigureMcu.srv  SetNamespace.srv
cpr_outdoornav_msgs/cpr_dock_msgs/: CMakeLists.txt
cpr_outdoornav_msgs/cpr_onav_mission_manager_msgs/: CMakeLists.txt  package.xml
cpr_outdoornav_msgs/cpr_platform_msgs/: CMakeLists.txt  package.xml
(+121 files in other folders)
