<?xml version="1.0"?>
<package format="3">
  <name>clearpath_msgs</name>
  <version>0.0.0</version>
  <description>Metapackage for Clearapth messages.</description>
  <license>BSD</license>

  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_recorder_msgs</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>ptz_action_server_msgs</exec_depend>
  <exec_depend>video_recorder_msgs</exec_depend>

  <!-- Robot specific messages for all platforms -->
  <exec_depend>dingo_msgs</exec_depend>
  <exec_depend>husky_msgs</exec_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>ridgeback_msgs</exec_depend>
  <exec_depend>warthog_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
