<?xml version="1.0"?>
<package format="3">
  <name>clearpath_msgs</name>
  <version>0.9.5</version>
  <description>Metapackage for Clearapth messages.</description>
  <license>BSD</license>

  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Platform messages -->
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>dingo_msgs</exec_depend>
  <exec_depend>husky_msgs</exec_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>ridgeback_msgs</exec_depend>
  <exec_depend>warthog_msgs</exec_depend>

  <!-- OutdoorNav dependencies -->
  <exec_depend>clearpath_configuration_msgs</exec_depend>
  <exec_depend>clearpath_control_msgs</exec_depend>
  <exec_depend>clearpath_dock_msgs</exec_depend>
  <exec_depend>clearpath_localization_msgs</exec_depend>
  <exec_depend>clearpath_mission_manager_msgs</exec_depend>
  <exec_depend>clearpath_mission_scheduler_msgs</exec_depend>
  <exec_depend>clearpath_navigation_msgs</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>clearpath_safety_msgs</exec_depend>

  <!-- Autonomy task action dependencies -->
  <!--
    DISABLED
    Eventually these packages will be bloomed to OSRF's build farm, but for now
    they're not explicitly necessary
  <exec_depend>audio_recorder_msgs</exec_depend>
  <exec_depend>ptz_action_server_msgs</exec_depend>
  <exec_depend>video_recorder_msgs</exec_depend>
  -->

  <export>
    <metapackage />
  </export>
</package>
