<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_msgs</name>
  <version>0.2.0</version>
  <description>Metapackage for Clearapth messages.</description>
  <license>BSD</license>

  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_platform_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
