<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_platform_msgs</name>
  <version>0.9.4</version>
  <description>Messages for Clearpath Platforms.</description>
  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genmsg</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
