<?xml version="1.0"?>
<package format="2">
  <name>clearpath_camera_msgs</name>
  <version>0.10.0</version>
  <description>ROS package containing the message definitions for camera related calls.</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
