<?xml version="1.0"?>
<package format="3">
  <name>clearpath_camera_msgs</name>
  <version>0.10.0</version>
  <description>ROS package containing the message definitions for camera related calls.</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
