<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_dock_msgs</name>
  <version>0.9.9</version>
  <description>ROS package containing the message definitions for the Clearpath Robotics OutdoorNav dock module.</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>clearpath_navigation_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
