<?xml version="1.0"?>
<package format="2">
  <name>clearpath_logger_msgs</name>
  <version>0.10.0</version>
  <description>ROS package containing the message definitions for the Clearpath Robotics OutdoorNav logging module.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
