<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_mission_scheduler_msgs</name>
  <version>0.9.9</version>
  <description>The clearpath_mission_scheduler_msgs package</description>

  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>Clearpath Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>clearpath_navigation_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
