<package format="2">
  <name>cpr_outdoornav_msgs</name>
  <version>0.1.13</version>
  <description>A collection of packages containing message definitions for Clearpath OutdoorNav software</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cpr_configuration_msgs</exec_depend>
  <exec_depend>cpr_control_msgs</exec_depend>
  <exec_depend>cpr_dock_msgs</exec_depend>
  <exec_depend>cpr_localization_msgs</exec_depend>
  <exec_depend>cpr_navigation_msgs</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>cpr_safety_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
