<package format="2">
  <name>clearpath_outdoornav_msgs</name>
  <version>0.0.0</version>
  <description>A collection of packages containing message definitions for Clearpath OutdoorNav software</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>clearpath_configuration_msgs</exec_depend>
  <exec_depend>clearpath_control_msgs</exec_depend>
  <exec_depend>clearpath_dock_msgs</exec_depend>
  <exec_depend>clearpath_localization_msgs</exec_depend>
  <exec_depend>clearpath_navigation_msgs</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>clearpath_safety_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
